--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [project]
 name = "anytype-client" 
-version = "0.0.1-alpha.13"
+version = "0.1.0"
 description = " A Python Client for Anytype."
 readme = "README.md"
 authors = [
