--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -5,6 +5,8 @@ theme:
   palette:
     scheme: slate
     primary: teal
+  logo: assets/any.jpg
+  favicon: assets/any.jpg
 nav:
   - Home: index.md
   - Getting Started: getting-started.md
