Host mkdocs site under charlesneimog

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,5 +1,5 @@
 site_name: Anytype Client
-site_url: https://hayduker.github.io/anytype-client
+site_url: https://charlesneimog.github.io/anytype-client
 theme:
   name: material
   palette:
